--- a/appsvc.yaml
+++ b/appsvc.yaml
@@ -1,13 +1,14 @@
-pre-build: |
-  apt-get update && apt-get install -y --no-install-recommends \
-    gcc \
-    libpango-1.0-0 \
-    libpangoft2-1.0-0 \
-    libjpeg-dev \
-    libopenjp2-7-dev \
-    libffi-dev \
-    libglib2.0-dev \
-	  ffmpeg
+version: 1
+
+pre-build: apt-get update && apt-get install -y --no-install-recommends \
+  gcc \
+  libpango-1.0-0 \
+  libpangoft2-1.0-0 \
+  libjpeg-dev \
+  libopenjp2-7-dev \
+  libffi-dev \
+  libglib2.0-dev \
+  ffmpeg
 
 post-build: |
   python manage.py makemigrations
