--- a/appsvc.yaml
+++ b/appsvc.yaml
@@ -1,6 +1,9 @@
 version: 1
 
-pre-build: apt-get update && apt-get install -y --no-install-recommends \
+
+
+post-build: |
+  apt-get update && apt-get install -y --no-install-recommends \
   gcc \
   libpango-1.0-0 \
   libpangoft2-1.0-0 \
@@ -9,7 +12,5 @@ pre-build: apt-get update && apt-get install -y --no-install-recommends \
   libffi-dev \
   libglib2.0-dev \
   ffmpeg
-
-post-build: |
   python manage.py makemigrations
   python manage.py migrate
